--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
             },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
-            }
+            },
+            fontSize: {
+              xs: ['0.875rem', { lineHeight: '1.25rem' }],    // Was 0.75rem
+              sm: ['1rem', { lineHeight: '1.5rem' }],          // Was 0.875rem
+              base: ['1.125rem', { lineHeight: '1.75rem' }],  // Was 1rem (18px now)
+              lg: ['1.25rem', { lineHeight: '1.75rem' }],     // Was 1.125rem
+              xl: ['1.5rem', { lineHeight: '2rem' }],          // Was 1.25rem
+              '2xl': ['1.875rem', { lineHeight: '2.25rem' }],   // Was 1.5rem
+              '3xl': ['2.25rem', { lineHeight: '2.5rem' }],     // Was 1.875rem
+              '4xl': ['3rem', { lineHeight: '1' }],              // Was 2.25rem
+              '5xl': ['3.75rem', { lineHeight: '1' }],           // Was 3rem
+              '6xl': ['4.5rem', { lineHeight: '1' }],            // Was 3.75rem
+            },
           }
         }
       }
