--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
       body { font-family: 'Inter', sans-serif; }
     </style>
   
+<script type="importmap">
+{
+  "imports": {
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "lucide-react": "https://esm.sh/lucide-react@^0.561.0"
+  }
+}
+</script>
 </head>
   <body>
     <div id="root"></div>
