--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sua Secretaria Virtual | Secretariado Remoto Estratégico</title>
-    <meta name="description" content="Liberte seu tempo e maximize seus resultados com nosso secretariado remoto estratégico." />
+    <title>Sua Secretaria Virtual | Secretariado Remoto para Médicos e Profissionais</title>
+    <meta name="description" content="Atendimento e organização de agenda médica sem complicação. Secretária remota profissional para consultórios, clínicas e escritórios. Aumente sua produtividade hoje." />
+    <meta name="keywords" content="secretária remota, secretariado para médicos, atendimento whatsapp, gestão de agenda, assistente virtual, consultório médico" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -21,16 +22,16 @@
               sans: ['Inter', 'sans-serif'],
             },
             fontSize: {
-              xs: ['0.875rem', { lineHeight: '1.25rem' }],    // Was 0.75rem
-              sm: ['1rem', { lineHeight: '1.5rem' }],          // Was 0.875rem
-              base: ['1.125rem', { lineHeight: '1.75rem' }],  // Was 1rem (18px now)
-              lg: ['1.25rem', { lineHeight: '1.75rem' }],     // Was 1.125rem
-              xl: ['1.5rem', { lineHeight: '2rem' }],          // Was 1.25rem
-              '2xl': ['1.875rem', { lineHeight: '2.25rem' }],   // Was 1.5rem
-              '3xl': ['2.25rem', { lineHeight: '2.5rem' }],     // Was 1.875rem
-              '4xl': ['3rem', { lineHeight: '1' }],              // Was 2.25rem
-              '5xl': ['3.75rem', { lineHeight: '1' }],           // Was 3rem
-              '6xl': ['4.5rem', { lineHeight: '1' }],            // Was 3.75rem
+              xs: ['0.875rem', { lineHeight: '1.25rem' }],
+              sm: ['1rem', { lineHeight: '1.5rem' }],
+              base: ['1.125rem', { lineHeight: '1.75rem' }],
+              lg: ['1.25rem', { lineHeight: '1.75rem' }],
+              xl: ['1.5rem', { lineHeight: '2rem' }],
+              '2xl': ['1.875rem', { lineHeight: '2.25rem' }],
+              '3xl': ['2.25rem', { lineHeight: '2.5rem' }],
+              '4xl': ['3rem', { lineHeight: '1' }],
+              '5xl': ['3.75rem', { lineHeight: '1' }],
+              '6xl': ['4.5rem', { lineHeight: '1' }],
             },
           }
         }
