feat: Broaden target audience keywords and description
Update meta description and keywords to be more inclusive of general professionals and liberal professionals, not just medical ones. This expands the potential reach of the website.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sua Secretaria Virtual | Secretariado Remoto para Médicos e Profissionais</title>
-    <meta name="description" content="Atendimento e organização de agenda médica sem complicação. Secretária remota profissional para consultórios, clínicas e escritórios. Aumente sua produtividade hoje." />
-    <meta name="keywords" content="secretária remota, secretariado para médicos, atendimento whatsapp, gestão de agenda, assistente virtual, consultório médico" />
+    <meta name="description" content="Atendimento e organização da sua agenda sem complicação. Secretária remota profissional para consultórios, clínicas e escritórios. Aumente sua produtividade hoje." />
+    <meta name="keywords" content="secretária remota, secretariado para profissionais liberais, atendimento whatsapp, gestão de agenda, assistente virtual, consultórios médicos" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
